--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=gamification-service
 spring.cloud.aws.region.static=us-west-1
 spring.cloud.aws.credentials.access-key=${AWS_ACCESS_KEY_ID}
 spring.cloud.aws.credentials.secret-key=${AWS_SECRET_ACCESS_KEY}
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
