--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,9 @@ spring.cloud.aws.region.static=us-west-1
 spring.cloud.aws.credentials.access-key=${AWS_ACCESS_KEY_ID}
 spring.cloud.aws.credentials.secret-key=${AWS_SECRET_ACCESS_KEY}
 
+spring.datasource.url=jdbc:mysql://localhost:3306/gamificationdb
+spring.datasource.username=${POSTGRES_USERNAME}
+spring.datasource.password=${POSTGRES_PASSWORD}
+
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
