feat: implement Redis Client singleton for centralized circuit breaking

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+resilience4j.circuitbreaker.instances.redisService.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.redisService.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.redisService.failureRateThreshold=20
+resilience4j.circuitbreaker.instances.redisService.waitDurationInOpenState=10s
+resilience4j.circuitbreaker.instances.redisService.permittedNumberOfCallsInHalfOpenState=3
