--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>gamification-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>gamification-service</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Gamification service (XP, achievements, streaks, leaderboard, etc.) for Liwanag</description>
 	<url/>
 	<licenses>
 		<license/>
